<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:fontFamily="@font/neodex"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05" />

    <Spinner
        android:id="@+id/spinnerActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="#80FFC0CB"
        android:entries="@array/spinnerItems"
        android:padding="16dp" />

    <Space
        android:id="@+id/taskSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="#80FFC0CB"
        android:padding="16dp"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05" />

    <EditText
        android:id="@+id/editInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/textviewbox"
        android:ems="10"
        android:hint="@string/inputHint"
        android:inputType="text"
        android:textSize="14sp" />

    <Space
        android:id="@+id/etSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAdd" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDelete" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnClear" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#FFF7F7" />

</LinearLayout>